(executable
    (name test_glfw)
    (preprocess (pps lwt_ppx))
    (public_name test_glfw_js)
    (js_of_ocaml)
    (libraries
        js_of_ocaml
        lwt
        Bigarray
        EsyGlfw
        EsyGlfwExamples
            ))

(install
    (section bin)
    (files index.html test_glfw.bc.js))
